<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/device_details_container_padding"
    >

    <TextView
        android:id="@+id/device_details_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_details_device_name_title"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:labelFor="@id/device_details_name_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/device_details_name_view"
        />

    <TextView
        android:id="@+id/device_details_name_view"
        android:layout_width="@dimen/MATCH_CONSTRAINT"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/device_details_title_margin_start"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/device_details_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Device Name"
        />

    <TextView
        android:id="@+id/device_details_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/device_details_item_margin"
        android:text="@string/device_details_device_id_title"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:labelFor="@id/device_details_id_view"
        app:layout_constraintTop_toBottomOf="@id/device_details_name_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/device_details_id_view"
        />

    <TextView
        android:id="@+id/device_details_id_view"
        android:layout_width="@dimen/MATCH_CONSTRAINT"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/device_details_item_margin"
        android:layout_marginStart="@dimen/device_details_title_margin_start"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/device_details_name_view"
        app:layout_constraintStart_toEndOf="@id/device_details_id_title"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="8173-8485-aj82-3260"
        />

    <TextView
        android:id="@+id/device_details_connection_status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/device_details_item_margin"
        android:text="@string/device_details_connection_status_title"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:labelFor="@id/device_details_connection_status_view"
        app:layout_constraintTop_toBottomOf="@id/device_details_id_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/device_details_connection_status_view"
        />

    <TextView
        android:id="@+id/device_details_connection_status_view"
        android:layout_width="@dimen/MATCH_CONSTRAINT"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/device_details_item_margin"
        android:layout_marginStart="@dimen/device_details_title_margin_start"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/device_details_id_view"
        app:layout_constraintStart_toEndOf="@id/device_details_connection_status_title"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Connected"
        />

    <TextView
        android:id="@+id/device_details_last_connected_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/device_details_item_margin"
        android:text="@string/device_details_last_connected_time_title"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:labelFor="@id/device_details_last_connected_view"
        app:layout_constraintTop_toBottomOf="@id/device_details_connection_status_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/device_details_last_connected_view"
        />

    <TextView
        android:id="@+id/device_details_last_connected_view"
        android:layout_width="@dimen/MATCH_CONSTRAINT"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/device_details_item_margin"
        android:layout_marginStart="@dimen/device_details_title_margin_start"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/device_details_connection_status_view"
        app:layout_constraintStart_toEndOf="@id/device_details_last_connected_title"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Jan 1 2021 - 9:13pm"
        />

    <Button
        android:id="@+id/device_details_connect_to_device_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/device_details_item_margin"
        app:layout_constraintTop_toBottomOf="@id/device_details_last_connected_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/device_details_connect_button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>